# stock-sentiment-dashboard

./: CONTRIBUTING.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  LLM_PROMPT_TEMPLATE.md  README.md  app.py  pyproject.toml  replit.md  requirements.txt  requirements_github.txt  setup.py
docs/: DEPLOYMENT.md
sample_data/: README.md
utils/: data_processor.py  predictor.py  sentiment_analyzer.py  visualizations.py
