[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.4",
    "streamlit>=1.46.0",
    "textblob>=0.19.0",
]
